# Schedula

./: README.md
SchedulaBackend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
SchedulaBackend/.github/: copilot-instructions.md
SchedulaBackend/src/: config.py  main.py  scheduler.py
SchedulaBackend/src/database/: database.py  init_db.sql
SchedulaBackend/src/input_convertor/: README.md  api_client.py  config.py  converter.py  excel_reader.py  load_constraints.py  load_unavailable_user.py  mapper.py  run_wet.py  test_converter.py
SchedulaBackend/src/llm_pipeline/: __init__.py
SchedulaBackend/src/llm_pipeline/config/: __init__.py  schedule_config.py
SchedulaBackend/src/llm_pipeline/language/: __init__.py  translator.py
SchedulaBackend/src/llm_pipeline/llm/: __init__.py  interface.py  ollama_provider.py  university_provider.py
SchedulaBackend/src/middleware/: auth.py  logging.py
SchedulaBackend/src/models/: auth.py  base.py  constraint.py  course.py  course_offering.py  course_schedule.py  dashboard.py  fairness_report.py  lecturer_course.py  schedule.py  schedule_approval.py  schedule_view.py  semester.py  solver_run.py  user.py  user_notification.py
SchedulaBackend/src/notifications/: lecturer_events.py  period_events.py
SchedulaBackend/src/repositories/: __init__.py  base.py  breaking_constraints.py  constraints.py  course_offering.py  courses.py  courses_schedules.py  dashboard_queries.py  fairness.py  fairness_reports.py  lecturer_courses.py  period_notification_events.py  schedule_approvals.py  schedule_queries.py  schedules.py  semester_period_state.py  semesters.py  solver_runs.py  user_notifications.py  users.py
SchedulaBackend/src/routes/: db.py  rabbitmq.py  webhooks.py  ws.py
SchedulaBackend/src/utils/: auth.py  llm_process.py  logger.py  password_hash.py  schedule_export.py
SchedulaBackend/src/validators/: __init__.py  structured_rules_validator.py
SchedulaBackend/src/websocket/: manager.py
SchedulaBackend/tests/llm_tests/: conftest.py  test_atomization.py  test_classification.py  test_extraction.py  test_negation.py  test_pipeline_integration.py  test_validation.py
SchedulaBackend/tests/notifications/: conftest.py  test_change_period_snapshot.py  test_constraint_saved.py  test_lecturer_events.py  test_period_starting_soon.py  test_schedule_published_transition.py  test_secretary_constraint_edit.py  test_solver_result_removed.py
SchedulaDeployment/: .env.example  README.md  SOLVER_DOCUMENTATION.md  docker-compose.yml  export_schedule.py  pyproject.toml
SchedulaDeployment/notification_service/: Dockerfile  README.md  pyproject.toml
SchedulaDeployment/notification_service/src/: config.py  db.py  main.py  models.py  period_messages.py  test_notification.py
SchedulaDeployment/notification_service/tests/: test_consume_dispatch.py  test_message_normalization.py
SchedulaDeployment/ollama/: Dockerfile
SchedulaDeployment/solver/: Dockerfile  README.md  pyproject.toml
SchedulaDeployment/solver/src/: db.py  main.py  solver.py
SchedulaDeployment/solver/tests/: conftest.py
SchedulaDeployment/tests/: README.md  conftest.py  generate_test_data.py  test_data_generators.py  test_failure_path.py  test_happy_path.py  test_over_constrained_path.py  test_partial_failure_path.py  test_realistic_university.py
SchedulaFrontend/: .dockerignore  (+9 more)
(+145 files in other folders)
