[project]
name = "schedulabackend"
version = "0.1.0"
description = "Schedula Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic[email]>=2.9.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-jose >=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "python-multipart >= 0.0.9",
    "aio-pika>=9.5.8",
    "httpx>=0.28.1",
    "aiohttp>=3.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "groq>=0.4.2",
    "pandas>=2.3.3",
    "apscheduler>=3.10.4",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-bidi>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
