[project]
name = "schedula-deployment-tests"
version = "0.1.0"
description = "Integration and E2E tests for Schedula"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aio-pika>=9.5.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
log_cli = true
log_cli_level = "INFO"
