[project]
name = "schedula-solver"
version = "0.1.0"
description = "Constraint solver service using Google OR-Tools"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.0.0",
    "ortools>=9.8.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (requires DB)",
    "load: Load/performance tests (slow)",
]
# Run commands:
# pytest tests/unit/ - Fast unit tests
# pytest tests/integration/ - DB integration tests  
# pytest tests/load/ - Load tests only
# pytest -m "not load" - Skip slow tests

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
